--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.5",
+    "styled-components": "^5.3.6",
     "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.0"
   },
